HTML edit for chooser prompt

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="appmenu" style="display:none;">
 		</div>
 		<div class="titlecontainer">
-			<h1>RdiOverload</h1>
+			<h1>RdiOVERLOAD</h1>
 			<h2>Powered by Rdio and Last.FM</h2>
 		</div>
 
@@ -41,7 +41,7 @@
 			<div class="plbutton button placeholder chosen">Playlists:</div>
 		</div>
 		<div class="ribbonfooter">
-			<div class="chooseprompt button">Playlist:</div>
+			<div class="chooseraction button">Go!</div>
 		</div>
 		<div class="ribbontoggle shown">- - -</div> 
 	</div>
