--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 
 	<div id="maincontent">
 		<div class="viewbox">
-			<div class="showcase">
-				
-			</div>
+			<div class="showcase"></div>
 			<div class="albumgrid"></div>
 		</div>
 	</div>
