trying to build track list

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/main.js"></script>
     <script src="js/chooser.js"></script>
 	<script src="js/rdio.js"></script>
+	<script src="js/showcase.js"></script>
 	<script src="js/lastfm.js"></script>
 	<script src="js/viewmaker.js"></script>
 
@@ -58,11 +59,6 @@
 	<div id="biopanel" class="panel"></div>
 	<!-- END Panels -->
 
-	<div id="maincontent">
-		<div class="viewbox">
-			<div class="showcase"></div>
-			<div class="albumgrid"></div>
-		</div>
-	</div>
+	<div id="maincontent"></div>
 </body>
 </html>
