--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>RdiOverload</title>
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="Author" content="Kevin Ewing" />
-  <meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="lib/normalize.css">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="Author" content="Kevin Ewing" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+	<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/banana-brick" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/ls" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet/less" type="text/css" href="style/main.less">
     <link rel="stylesheet/less" type="text/css" href="style/chooser.less">
     <link rel="stylesheet/less" type="text/css" href="style/showcase.less">
@@ -27,7 +28,6 @@
 		</div>
 		<div class="titlecontainer">
 			<h1>RdiOVERLOAD</h1>
-			<h2>Powered by Rdio and Last.FM</h2>
 		</div>
 
 		<div id="settingsbutton"></div>
