--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="Author" content="Kevin Ewing" />
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/banana-brick" rel="stylesheet" type="text/css"/>
-	<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/ls" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/intuitive" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet/less" type="text/css" href="style/main.less">
     <link rel="stylesheet/less" type="text/css" href="style/chooser.less">
     <link rel="stylesheet/less" type="text/css" href="style/showcase.less">
