--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div id="header">
 		<div class="appmenu" style="display:none;">
 		</div>
-		<div class="titlecontainer">
+		<div class="titlecontainer button">
 			<h1>RdiOVERLOAD</h1>
 		</div>
 
@@ -49,14 +49,26 @@
 	<!-- END Ribbon Chooser -->
 
 	<div id="loginpanel" class="panel">
-		<div class="titlecontainer"><h1>Welcome to RdiOverload!</h1></div>
-		<div id="authbutton" class="rdio"></div>
-		<p>RdiOverload helps you learn about the artists and albums in your <span class="rdio">Rdio</span> playlists.</p>
+		<div class="titlecontainer">
+			<h1>Welcome to RdiOverload!</h1>
+			<div class="close button">[ CLOSE ]</div>
+		</div>
+		<div class="panelbody">
+			<p>Now that you've got access to millions of songs, it's time to play around and have some fun</p>
+			<ul>
+				<lh>Key Features</lh>
+				<li>Album wall puts the art back in music: Zoom to images up to 1200 x 1200 px.</li>
+				<li>Browse your friend's playlists when you get bored of your own.</li>
+				<li>Instantly play a track or album, or add it to your queue to listen later.</li>
+			</ul>
+			<p>RdiOverload helps you visualize your playlists by album. It turns each playlist into a micro-collection, and gives you access to play or queue any album it features (as well as their other tracks, just in case). You can think of the indivudual tracks in the playlist as the "greatest hits" from the micro-collection</p>
+			<div id="authbutton" class="button rdio"></div>
+		</div>
 	</div>
 	<!-- START Panels -->
-	<div id="userpanel" class="panel"></div>
-	<div id="settingspanel" class="panel"></div>
-	<div id="biopanel" class="panel"></div>
+	<div id="userpanel" class="panel" style="display:none;"></div>
+	<div id="settingspanel" class="panel" style="display:none;"></div>
+	<div id="biopanel" class="panel" style="display:none;"></div>
 	<!-- END Panels -->
 
 	<div id="maincontent"></div>
