--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	</div>
 	<!-- END Ribbon Chooser -->
 
+	<!-- START Panels -->
 	<div id="loginpanel" class="panel">
 		<div class="titlecontainer">
 			<h1>Welcome to RdiOverload!</h1>
@@ -65,10 +66,20 @@
 			<div id="authbutton" class="button rdio"></div>
 		</div>
 	</div>
-	<!-- START Panels -->
-	<div id="userpanel" class="panel" style="display:none;"></div>
-	<div id="settingspanel" class="panel" style="display:none;"></div>
-	<div id="biopanel" class="panel" style="display:none;"></div>
+	<!--  -->
+	<div id="userpanel" class="panel" style="display:none;"><div class="panelbody"></div></div>
+	<!--  -->
+	<div id="settingspanel" class="panel" style="display:none;"><div class="panelbody"></div></div>
+	<!--  -->
+	<div id="biopanel" class="panel" style="display:none;">
+		<div class="titlecontainer">
+			<h1>Last.FM Artist Bio:</h1>
+			<div class="close button">[ CLOSE ]</div>
+		</div>
+		<div class="panelbody">
+			<div class="artistart"></div>
+		</div>
+	</div>
 	<!-- END Panels -->
 
 	<div id="maincontent"></div>
