Fixed login sequence

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 			<div class="close button">[ CLOSE ]</div>
 		</div>
 		<div class="panelbody">
-			<div class="artistart"></div>
+			<img class="artistart" src="">
+		<div class="close button">[ CLOSE ]</div>
 		</div>
 	</div>
 	<!-- END Panels -->
