help and bio work

--- a/index.html
+++ b/index.html
@@ -78,11 +78,16 @@
 		</div>
 		<div class="panelbody">
 			<img class="artistart" src="">
-		<div class="close button">[ CLOSE ]</div>
 		</div>
 	</div>
 	<!-- END Panels -->
-
 	<div id="maincontent"></div>
+	<div id="help" class="button">???
+		<p style="display:none;">RdioOverload is designed for use with an Rdio account. You will need to authorize this app from the home screen to access your Rdio account. If you've already closed the home screen, you can bring it up again by clicking the title in the upper-left.</p>
+		<p style="display:none;">Once the app is authorized it will reach out to Rdio to grab your playlists. These playlists will appear as options in the chooser, which should drop down from the header on the left-hand side. Clicking once on "Playlist:" will reveal your options, clicking on a playlist will choose it.</p>
+		<p style="display:none;">Once you have selected a playlist to view, click the "Go!" button at the bottom of the chooser which will load the list.</p>
+		<p style="display:none;">If you don't see the album grid simply scroll down until you do. Clicking an album will showcase it and give you additional ways to interact with it.</p>
+		<p>
+	</div>
 </body>
 </html>
