--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/intuitive" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet/less" type="text/css" href="style/main.less">
     <link rel="stylesheet/less" type="text/css" href="style/chooser.less">
+    <link rel="stylesheet/less" type="text/css" href="style/player.less">
     <link rel="stylesheet/less" type="text/css" href="style/showcase.less">
     <script src="https://rdio.com/api/api.js?client_id=gQ5TpN7GOjeUbuUlDjmx6A"></script>
     <script src="/lib/underscore-min.js"></script>
@@ -82,6 +83,13 @@
 	</div>
 	<!-- END Panels -->
 	<div id="maincontent"></div>
+	<div id="nowplaying" class="button">$$$
+		<div style="display:none;" id="playertrack"></div>
+		<div class="button" style="display:none;">b</div>
+		<div class="button" style="display:none;">pp</div>
+		<div class="button" style="display:none;">f</div>
+		<div class="button" style="display:none;">nq</div>
+	</div>
 	<div id="help" class="button">???
 		<p style="display:none;">RdioOverload is designed for use with an Rdio account. You will need to authorize this app from the home screen to access your Rdio account. If you've already closed the home screen, you can bring it up again by clicking the title in the upper-left.</p>
 		<p style="display:none;">Once the app is authorized it will reach out to Rdio to grab your playlists. These playlists will appear as options in the chooser, which should drop down from the header on the left-hand side. Clicking once on "Playlist:" will reveal your options, clicking on a playlist will choose it.</p>
