--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="/lib/less-1.3.0.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/chooser.js"></script>
+    <script src="js/userpanel.js"></script>    
 	<script src="js/rdio.js"></script>
 	<script src="js/showcase.js"></script>
 	<script src="js/lastfm.js"></script>
