--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <link rel="stylesheet/less" type="text/css" href="style/chooser.less">
     <link rel="stylesheet/less" type="text/css" href="style/player.less">
     <link rel="stylesheet/less" type="text/css" href="style/showcase.less">
+    <link rel="stylesheet/less" type="text/css" href="style/userpanel.less">
     <script src="https://rdio.com/api/api.js?client_id=gQ5TpN7GOjeUbuUlDjmx6A"></script>
+    <script src="/lib/path.min.js"></script>
     <script src="/lib/underscore-min.js"></script>
     <script src="/lib/jquery-1.8.2.min.js"></script>
     <script src="/lib/less-1.3.0.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/router.js"></script>
     <script src="js/chooser.js"></script>
     <script src="js/userpanel.js"></script>    
 	<script src="js/rdio.js"></script>
@@ -69,7 +72,14 @@
 		</div>
 	</div>
 	<!--  -->
-	<div id="userpanel" class="panel" style="display:none;"><div class="panelbody"></div></div>
+	<div id="userpanel" class="panel" style="display:none;">
+		<div class="panelbody">
+			<div class="user"></div>
+			<div class="peoplelists"></div>
+			<div class="people"></div>
+			<div class="actions"></div>
+		</div>
+	</div>
 	<!--  -->
 	<div id="settingspanel" class="panel" style="display:none;"><div class="panelbody"></div></div>
 	<!--  -->
