--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script src="https://rdio.com/api/api.js?client_id=gQ5TpN7GOjeUbuUlDjmx6A"></script>
     <script src="/lib/path.min.js"></script>
     <script src="/lib/underscore-min.js"></script>
-    <script src="/lib/jquery-1.8.2.min.js"></script>
+    <script src="/lib/jquery-1.9.0.js"></script>
+    <script src="/lib/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="/lib/less-1.3.0.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/router.js"></script>
