Getting ready for user panel

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 			<div class="plbutton button placeholder chosen">Playlists:</div>
 		</div>
 		<div class="ribbonfooter">
-			<div class="chooseraction button">Go!</div>
+			<div class="chooseraction artistgo button">By Artist!</div>
+			<div class="chooseraction albumgo button">By Album!</div>
 		</div>
 		<div class="ribbontoggle shown">- - -</div> 
 	</div>
