Playpause button working

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<div id="nowplaying" class="button">$$$
 		<div style="display:none;" id="playertrack"></div>
 		<div class="button" style="display:none;">b</div>
-		<div class="button" style="display:none;">pp</div>
+		<div class="button playpause" style="display:none;">pp</div>
 		<div class="button" style="display:none;">f</div>
 		<div class="button" style="display:none;">nq</div>
 	</div>
