Set up more player buttons. queuenext broken

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
 
 	<div id="nowplaying" class="button">$$$
 		<div style="display:none;" id="playertrack"></div>
-		<div class="button" style="display:none;">b</div>
+		<div class="button rdioback" style="display:none;">b</div>
 		<div class="button playpause" style="display:none;">pp</div>
-		<div class="button" style="display:none;">f</div>
-		<div class="button" style="display:none;">nq</div>
+		<div class="button rdioforward" style="display:none;">f</div>
+		<div class="button queuenext" style="display:none;">nq</div>
 	</div>
 	<div id="help" class="button">???
 		<p style="display:none;">RdioOverload is designed for use with an Rdio account. You will need to authorize this app from the home screen to access your Rdio account. If you've already closed the home screen, you can bring it up again by clicking the title in the upper-left.</p>
